--- a/angular-vis/src/app/vis/vis.component.html
+++ b/angular-vis/src/app/vis/vis.component.html
@@ -18,12 +18,12 @@
   <mat-sidenav-content>
       <!--<textarea [(ngModel)]="import_export" id=input_output></textarea>
       <button md-fab class="mat-primary" id="import_button" (click)="importNetwork()" >Import</button>-->
-     
+
     <div style=" width: 1000px;
                  height: 1000px;
                  margin:0px;
-                 border: 1px solid lightgray;" #networkDiv></div>
+                 border: 0;" #networkDiv></div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-   
-   
+
+
